--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -4,7 +4,7 @@ import BlogPost from "../layouts/BlogPost.astro";
 
 export async function getStaticPaths() {
   console.log("PROD", import.meta.env);
-  const posts = await getCollection("blog", (x) => import.meta.env.PROD ? !x.data.draft : true);
+  const posts = await getCollection("blog", (x) => import.meta.env.IS_PRODUCTION === 'true' ? !x.data.draft : true);
   // console.log(posts.map(x => [x.id, x.data]));
   return posts.map((post) => ({
     params: { slug: post.slug },
