--- a/src/components/Figure.astro
+++ b/src/components/Figure.astro
@@ -1,11 +1,12 @@
 ---
+import { Image } from 'astro:assets';
 interface Props {
-  src: string;
+  src: ImageMetadata;
   alt: string;
   caption: string;
-  width?: string;
+  width?: number | `${number}`;
 }
-const { src,alt,caption, children, width, ...rest } = Astro.props;
+const { src,alt,caption,  width, ...rest } = Astro.props;
 // replace src={import("./([^")}]*") by src={import("./$1)}
 ---
 <style>
@@ -17,7 +18,7 @@ const { src,alt,caption, children, width, ...rest } = Astro.props;
          }
 </style>
 <figure class="blog-post-figure" {...rest}>
-    <img loading="lazy" src={src.src} alt={alt || caption} width={width}/>
-  {children && <figcaption><slot /></figcaption>}
+    <Image src={src} alt={alt || caption} width={width}/>
+  <!-- {children && <figcaption><slot /></figcaption>} -->
   {caption && <figcaption>{caption}</figcaption>}
 </figure>
