--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -3,7 +3,7 @@ import { CollectionEntry, getCollection } from "astro:content";
 import BlogPost from "../layouts/BlogPost.astro";
 
 export async function getStaticPaths() {
-  console.log("PROD", import.meta.env);
+  console.log("PROD", import.meta.env, import.meta.env.IS_PRODUCTION, import.meta.env.IS_PRODUCTION === 'true');
   const posts = await getCollection("blog", (x) => (!import.meta.env.DEV && import.meta.env.IS_PRODUCTION !== 'false') ? !x.data.draft : true);
   // console.log(posts.map(x => [x.id, x.data]));
   return posts.map((post) => ({
