lots of config to get a proper preview

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -7,14 +7,15 @@ import FormattedDate from "../components/FormattedDate.astro";
 import { findImage} from "../utils";
 import BlogPostMetadata from "../components/BlogPostMetadata.astro";
 type Props = CollectionEntry<"blog"> & {remarkPluginFrontmatter: Record<string, any>};
-const { title, description, pubDate, updatedDate, heroImage, banner } = Astro.props.data;
+const { title, description, pubDate, updatedDate, heroImage, banner, staticBanner } = Astro.props.data;
 const {slug,remarkPluginFrontmatter } = Astro.props;
+console.warn("STATIC ",staticBanner, banner, staticBanner ? staticBanner : banner)
 ---
 
 <html lang="en">
   <head>
     <BaseHead title={title} description={remarkPluginFrontmatter?.abstract || description}
-     image={await findImage(slug + "/" + banner)} 
+     image={await findImage(slug + "/" + (staticBanner ? staticBanner : banner))} 
      />
     <style>
       .title {
