--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import HeaderLink from "./HeaderLink.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
+import { Icon } from "astro-icon";
 ---
 
 <header>
@@ -19,6 +20,9 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
     <!-- <HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">Twitter</HeaderLink> -->
     <HeaderLink href="https://github.com/theor" target="_blank">
       GitHub
+    </HeaderLink>
+    <HeaderLink href="/rss.xml">
+      <Icon name="mdi:rss" />
     </HeaderLink>
   </nav>
 </div>
